# CAPSTONE_WILMERM

./: .env.example  .gitignore  CAPSTONE_PROPOSAL.md  CURSOR_CROSS_PROJECT_CONTEXT.md  Capstone Outline Template.md  DE Capstone Requirements.md  PLAN.md  PROJECT4_CONTEXT.md  README.md  RESUMEN_CONVERSACION.md  docker-compose.yml  pyproject.toml  test_apis.py
.cursor/rules/: formatting-style.mdc  pipeline-standards.mdc
.github/workflows/: ci.yml  pipeline.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: mart_blue_zone_comparison.sql  mart_health_overview.sql
dbt_project/models/staging/: _sources.yml  _staging.yml  stg_blue_zones.sql  stg_cdc_chronic_disease.sql  stg_census_demographics.sql  stg_epa_air_quality.sql  stg_usda_foods.sql
dbt_project/seeds/: state_lookup.csv
src/: config.py  db.py  export_to_duckdb.py
src/flows/: deploy.py  ingestion_flow.py
src/ingestion/: blue_zones.py  cdc_chronic.py  census.py  epa_airnow.py  http_client.py  usda_fooddata.py
