[project]
name = "health-platform"
version = "0.1.0"
description = "Environmental Health & Nutrition Data Platform — DE Capstone"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "dbt-postgres>=1.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]
